--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
 
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Service</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Team</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
 
                 </ul>
             </div><!-- /.navbar-collapse -->
@@ -122,7 +122,9 @@
                     <div class="item active">
                         <img src="layer.png" width="100%;" alt="...">
                         <div class="carousel-caption">
-                            <div> <h2 class="please" > Please </h2> </div>
+                            <h2> This is a main heading </h2>
+                            <p> Lorem Ipsum is simply dummy text <br> of printing </p>
+                            <form action=" "> <button type="submit" class="header_button"> Learn More </button> </form>
                             <h3>...</h3>
                             <p>...</p>
                         </div>
