--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Bootstrap 101 Template</title>
 
-    
+    <link href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans:400,600,700,800&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/bootstrap.css"  crossorigin="anonymous">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/type.css">
@@ -159,7 +160,7 @@
 
         <!-- Three columns of text below the carousel -->
         <div class="row">
-            <h2> The team </h2>
+            <h2 class="the_team" > The Team </h2>
             <div class="col-lg-3"  >
                 <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
                 <h2>Adrian Thomas </h2>
